--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,8 @@ server:
 spring:
   boot:
     admin:
+      auto-deregistration: true
       url: http://localhost:8080
   mvc:
     async:
       request-timeout: -1
-      
-#spring.mvc.async.request-timeout=-1﻿​
